bk_ida/gccida/c1/split_2
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50567:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v4; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50576:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v6; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50589:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_881( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50597:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_881( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50602:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_881( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50607:29: error: use of undeclared identifier 'recog_data_0'
v10 = *( unsigned __int16 *)recog_data_0.operand[0]; 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50612:10: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtuint = recog_data_0.operand[0]->fld[0].rtuint; 
         ^~~~~~~~~~~~
         recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50619:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( v10 != 61 || recog_data_0.operand[0]->fld[0].rtint > 3u ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50625:30: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& !reg_overlap_mentioned_p( recog_data_0.operand[0], ( rtx)v6) ) 
                             ^~~~~~~~~~~~
                             recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50627:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_882( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50637:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v6; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50647:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v162 = true_regnum( recog_data_0.operand[0]); 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50648:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( v162 == true_regnum( recog_data_0.operand[1]) ) 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50649:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_883( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50656:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v4; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50666:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v12; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50678:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_879( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50685:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v12; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/insn-recog.c:50698:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_885( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_2/src/obj/insn-recog.o] Error 1
